image alignment issue fix

--- a/src/app/user/sign-up/sign-up.component.scss
+++ b/src/app/user/sign-up/sign-up.component.scss
@@ -630,7 +630,7 @@
   display: flex;
   width: 100%; 
   height: 100%;
-  object-fit: cover; 
+  // object-fit: cover; 
   position: absolute;
   top: 0;
   left: 0;
